@@ -36,6 +36,7 @@ const TCHAR *g_tables[] =
 	"user_groups",
 	"user_group_members",
 	"user_profiles",
+	"userdb_custom_attributes",
 	"object_properties",
 	"object_custom_attributes",
 	"zones",
@@ -61,7 +62,6 @@ const TCHAR *g_tables[] =
 	"acl",
 	"trusted_nodes",
 	"items",
-	"thresholds",
 	"dci_schedules",
 	"raw_dci_values",
 	"event_cfg",
@@ -69,14 +69,15 @@ const TCHAR *g_tables[] =
 	"actions",
 	"event_groups",
 	"event_group_members",
-	"time_ranges",
 	"event_policy",
 	"policy_source_list",
 	"policy_event_list",
 	"policy_action_list",
-	"policy_situation_attr_list",
 	"policy_time_range_list",
+	"policy_situation_attr_list",
+	"time_ranges",
 	"deleted_objects",
+	"thresholds",
 	"alarms",
 	"alarm_notes",
 	"oid_to_type",
@@ -103,7 +104,10 @@ const TCHAR *g_tables[] =
 	"situations",
 	"snmp_communities",
 	"web_maps",
-	"userdb_custom_attributes",
+	"ap_common",
+	"ap_bindings",
+	"ap_config_files",
+	"usm_credentials",
 	NULL
 };
 
